test/users/ssridhar/atomic/errors/test_sync_lock_in_atomic.prediff
#!/bin/bash

echo $2

outfile=$2

sed -e "/ChapelBase/ s/:[0-9]*: /:: /g" $outfile > $outfile.tmp

mv $outfile.tmp $outfile
